			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2589 2004/04/13 12:53:55 jinmei Exp $

<200404>
2004-04-13  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (getaddrinfo): clean-up:
	removed the definition of the AI_V4MAPPED and AI_ALL flags (when
	they are defined), and removed incomplete support for the flags.

2004-04-13  itojun
	* kame/kame/libinet6/getaddrinfo.c (getaddrinfo): added support
	for the AI_NUMERICSERV flag.

2004-04-10  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (reorder): made sure to call
	set_source() to set the source address information for each
	candidate of destination.  This was lost by accident in April
	2003, and the destination address ordering has been incomplete
	since then.

Thu Apr  8 14:41:22 JST 2004 sakane@kame.net
	* kame/kame/racoon/proposal.c:
	fixed the EXACT mode to compare the proposals.  the lifetime in phase2
	did not work in the case of EXACT mode.

2004-04-06  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/sys/netinet6/ip6_output.c, kame/sys/netinet/ip6.h
	  FreeBSD Security Advisory: FreeBSD-SA-04:06.ipv6

2004-04-04  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/freebsd5: makes it compilable.

Fri Apr  2 17:35:45 JST 2004 sakane@kame.net
	* kame/sys/netkey/key.c:
	fixed that a memory leak happend in the case that the compile
	option, IPSEC_DOSEQCHECK was defined and called key_update().

Fri Apr  2 16:27:00 JST 2004 sakane@kame.net
	* kame/kame/tcpdump/print-isakmp.c:
	fixed that there was a possibility tcpdump(8) fell into infinite loop. 
	and the problem was at print-isakmp.c, so racoon also fell into it
	when the debug option was used.

2004-04-02  SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* *bsd*/sys/netinet/udp_usrreq.c, kame/sys/netinet/in_msf.[ch]
	code cleanup: uses a per-socket/interface MSF-check 
	function for IPv4 and IPv6 (essentially same as my patch committed 
	on Feb 6 2004)
